Fix bug: form can't type on Safari

--- a/css/style.sass
+++ b/css/style.sass
@@ -91,7 +91,7 @@ $paper: url('/img/paper.png')
   box-sizing: border-box
   outline: none
   appearance: none
-  user-select: none
+  -webkit-touch-callout: none
   cursor: url('../img/icn-arrow.png'), auto
 
 html, body
